--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>EPhone</title>
     <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
     <style>
-        @font-face {  font-family: 'bulangni';  src: url('https://files.catbox.moe/yzfk0h.ttf') ;  font-weight: normal;  font-style: normal;  font-display: swap;  }
+        @font-face {  @font-face {  @font-face {  font-family: 'bulangni';  src: url('https://sharkpan.xyz/f/eBBJSw/%E7%AC%99%E3%81%AEwink90.ttf') ;  font-weight: normal;  font-style: normal;  font-display: swap;  }
         :root { --screen-width: 350px; --screen-height: 740px; --secondary-bg: #ffffff; --border-color: #e0e0e0; --text-primary: #1f1f1f; --text-secondary: #8a8a8a; --accent-color: #007bff; }
         html { height: 100%; overflow: hidden; }
         body { height: 100%; overflow: hidden; margin: 0; padding: 20px; font-family: 'bulangni', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-weight: normal; background-color: #dcdcdc; display: flex; justify-content: center; align-items: center; box-sizing: border-box; }
