--- a/index.html
+++ b/index.html
@@ -28,6 +28,69 @@
         .header .header-actions { display: flex; align-items: center; gap: 15px; }
         .header .back-btn, .header .action-btn { font-size: 24px; cursor: pointer; width: 30px; text-align: center; color: var(--accent-color); display: flex; align-items: center; justify-content: center; }
 
+/* === 气泡主题样式 === */
+        .message-bubble.user .content { background-color: rgba(255, 255, 255, 0.7); color: #ad738c; border-radius: 8px 8px 8px 8px; }
+        .message-bubble.ai .content { background-color: rgba(255, 255, 255, 0.7); color: #667a52; border-radius: 8px 8px 8px 8px; }
+
+.message-bubble.ai .content::after {
+    content: ''; 
+    display: block; 
+    background-image: url('https://i.postimg.cc/mD2ns8b6/IMG-6989.png'); 
+    background-size: contain; 
+    background-repeat: no-repeat; 
+    position: absolute;
+    bottom: -8px;
+    right: -12px;
+    width: 22px;
+    height: 22px;
+    z-index: 1;
+}
+
+.message-bubble.user .content::after {
+    content: ''; 
+    display: block; 
+    background-image: url('https://i.postimg.cc/TPry6Jkm/212-20250620233836.png'); 
+    background-size: contain; 
+    background-repeat: no-repeat; 
+    position: absolute;
+    bottom: -8px;
+    left: -10px;
+    width: 28px;
+    height: 28px;
+    z-index: 1;
+}
+      
+        #chat-messages[data-theme="pink_blue"] .message-bubble.user .content { background-color: #FADADD; color: #5D3A3A; }
+        #chat-messages[data-theme="pink_blue"] .message-bubble.ai .content { background-color: #D6EAF8; color: #283747; }
+        #chat-messages[data-theme="blue_white"] .message-bubble.user .content { background-color: #cce5ff; color: #004085; }
+        #chat-messages[data-theme="blue_white"] .message-bubble.ai .content { background-color: #f8f9fa; color: #383d41; }
+        #chat-messages[data-theme="purple_yellow"] .message-bubble.user .content { background-color: #E6E6FA; color: #4B0082; }
+        #chat-messages[data-theme="purple_yellow"] .message-bubble.ai .content { background-color: #FFFACD; color: #5C4033; }
+        #chat-messages[data-theme="black_white"] .message-bubble.user .content { background-color: #343a40; color: #f8f9fa; }
+        #chat-messages[data-theme="black_white"] .message-bubble.ai .content { background-color: #f8f9fa; color: #343a40; }
+        #chat-messages[data-theme="yellow_white"] .message-bubble.user .content { background-color: #FFEB3B; color: #5D4037; }
+        #chat-messages[data-theme="yellow_white"] .message-bubble.ai .content { background-color: #f8f9fa; color: #383d41; }
+        #chat-messages[data-theme="red_black"] .message-bubble.user .content { background-color: #C62828; color: #FFFFFF; }
+        #chat-messages[data-theme="red_black"] .message-bubble.ai .content { background-color: #212121; color: #FFFFFF; }
+        #chat-messages[data-theme="blue_yellow"] .message-bubble.user .content { background-color: #A0D2EB; color: #153243; }
+        #chat-messages[data-theme="blue_yellow"] .message-bubble.ai .content { background-color: #FEF9E7; color: #5D4037; }
+        #chat-messages[data-theme="pink_yellow"] .message-bubble.user .content { background-color: #F8BBD0; color: #5B2C6F; }
+        #chat-messages[data-theme="pink_yellow"] .message-bubble.ai .content { background-color: #FEF9E7; color: #5D4037; }
+        #chat-messages[data-theme="pink_purple"] .message-bubble.user .content { background-color: #F8BBD0; color: #5B2C6F; }
+        #chat-messages[data-theme="pink_purple"] .message-bubble.ai .content { background-color: #E6E6FA; color: #4B0082; }
+        #chat-messages[data-theme="gray_white"] .message-bubble.user .content { background-color: #e9ecef; color: #495057; }
+        #chat-messages[data-theme="gray_white"] .message-bubble.ai .content { background-color: #f8f9fa; color: #383d41; }
+        #chat-messages[data-theme="blue_green"] .message-bubble.user .content { background-color: #d1ecf1; color: #0c5460; }
+        #chat-messages[data-theme="blue_green"] .message-bubble.ai .content { background-color: #d4edda; color: #155724; }
+        #chat-messages[data-theme="pink_white"] .message-bubble.user .content { background-color: #fce4ec; color: #880e4f; }
+        #chat-messages[data-theme="pink_white"] .message-bubble.ai .content { background-color: #f8f9fa; color: #383d41; }
+        #chat-messages[data-theme="pink_black"] .message-bubble.user .content { background-color: #F8BBD0; color: #5B2C6F; }
+        #chat-messages[data-theme="pink_black"] .message-bubble.ai .content { background-color: #343a40; color: #f8f9fa; }
+        #chat-messages[data-theme="pink_green"] .message-bubble.user .content { background-color: #F8BBD0; color: #5B2C6F; }
+        #chat-messages[data-theme="pink_green"] .message-bubble.ai .content { background-color: #C8E6C9; color: #1B5E20; }
+        #chat-messages[data-theme="green_black"] .message-bubble.user .content { background-color: #d4edda; color: #155724; }
+        #chat-messages[data-theme="green_black"] .message-bubble.ai .content { background-color: #343a40; color: #f8f9fa; }
+	    
 .header .action-btn {
     font-size: 16px; /* 专门为“上传”、“+”等文字按钮缩小字号 */
     font-weight: 600; /* 可以加粗一点让它更清晰 */
